objects/Account_Plan_Key_Relationships__c/Account_Plan_Key_Relationships__c.object-meta.xml
<CustomObject>
    <description>[https://tanium.atlassian.net/browse/SS-6846]create an Account Plan process that will allow us to standardize and improve how we do Account Planning for FY</description>
    <label>Account Plan Key Relationships</label>
    <nameField>
        <displayFormat>APKR-{000000}</displayFormat>
        <label>Account Plan Key Relationships Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Key Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>