objects/Account_Plan_Key_Relationships__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <inlineHelpText>Select the account plan</inlineHelpText>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Account Plan Key Relationships</relationshipLabel>
    <relationshipName>Account_Plan_Key_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>