objects/Account_Plan_Key_Relationships__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Plan Key Relationships</relationshipLabel>
    <relationshipName>Account_Plan_Key_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>