objects/Account_Plan_Key_Relationships__c/fields/Org_Chart_link__c.field-meta.xml
<CustomField>
    <fullName>Org_Chart_link__c</fullName>
    <label>Org Chart link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>