objects/Account_Plan_Key_Relationships__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <inlineHelpText>What is the relationship type for this key contact?</inlineHelpText>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>CISO</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Saboteur</fullName>
            </value>
            <value>
                <fullName>Technical Champion</fullName>
            </value>
            <value>
                <fullName>VP IT Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>